# ld64-msys

./: .gitignore  README.md  buildblocksninja.sh  buildclangninja.sh  buildld64make.sh  buildllvmninja.sh  buildmmanninja.sh  buildtapininja.sh  cyg-reinstall-x86.bat  cyg-reinstall-x86_64.bat  libtapi.patch  pacman_packages.sh  ubuntu.sh
blocks/: CMakeLists.txt  build.sh
cctools/: Makefile.in  aclocal.m4  configure  configure.ac  ld64.project  ltmain.sh
cctools/ar/: Makefile.in
cctools/as/: Makefile.in  filenames.h
cctools/as/arm/: Makefile.in
cctools/as/i386/: Makefile.in
cctools/as/ppc/: Makefile.in
cctools/as/ppc64/: Makefile.in
cctools/as/x86_64/: Makefile.in
cctools/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cctools/efitools/: Makefile.in
cctools/include/foreign/: dlfcn.h
cctools/include/foreign/i386/: _types.h
cctools/include/stuff/: write64.h
cctools/ld64/: Makefile.am  Makefile.in  configure  configure.ac
cctools/ld64/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cctools/ld64/doc/man/: Makefile.in
cctools/ld64/src/: Makefile.in
cctools/ld64/src/3rd/: Makefile.am  Makefile.in  find_executable.c  helper.c
cctools/ld64/src/ld/: Makefile.in  Options.cpp  OutputFile.cpp  PlatformSupport.h  Resolver.cpp  Snapshot.cpp
cctools/ld64/src/ld/code-sign-blobs/: blob.cpp  endian.h
cctools/ld64/src/ld/parsers/: Makefile.in  archive_file.cpp  lto_file.cpp  macho_relocatable_file.cpp
cctools/ld64/src/ld/parsers/libunwind/: AddressSpace.hpp  Registers.hpp
cctools/ld64/src/ld/passes/: Makefile.in  compact_unwind.cpp  dtrace_dof.cpp
cctools/ld64/src/other/: Makefile.am  Makefile.in
cctools/libmacho/: Makefile.in
cctools/libobjc2/: Makefile.am  Makefile.in  objc_msgSend.x86-32.S  objc_msgSend.x86-64.S  visibility.h
cctools/libstuff/: Makefile.in  port.c
cctools/man/: Makefile.in
cctools/misc/: Makefile.in  lipo.c
cctools/otool/: Makefile.am  Makefile.in
ld/: Makefile.in  aclocal.m4  configure  configure.ac
ld/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
ld/include/foreign/sys/: attr.h
ld/include/sys/: cdefs.h
ld/ld64/: Makefile.in
ld/ld64/doc/man/: Makefile.in
ld/ld64/src/: Makefile.in
ld/ld64/src/3rd/: Makefile.in  find_executable.c  helper.c  helper.h  mkpath_np.c
ld/ld64/src/ld/: InputFiles.cpp  Makefile.am  Makefile.in  Options.cpp  OutputFile.cpp  PlatformSupport.h  Resolver.cpp  ld.cpp  ld.hpp
ld/ld64/src/ld/code-sign-blobs/: blob.cpp  endian.h
ld/ld64/src/ld/parsers/: Makefile.in  lto_file.cpp  macho_dylib_file.cpp  macho_relocatable_file.cpp  textstub_dylib_file.cpp
ld/ld64/src/ld/parsers/libunwind/: AddressSpace.hpp
ld/ld64/src/ld/passes/: Makefile.in  dtrace_dof.cpp  objc.cpp  thread_starts.cpp
ld/ld64/src/other/: Makefile.am  Makefile.in  ObjectDump.cpp  dyldinfo.cpp  machochecker.cpp
ld/m4/: llvm.m4
ld64/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  include  ld64
ld64/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
ld64/include/: bzero.h
ld64/include/foreign/: dlfcn.h
ld64/include/foreign/arm/: _types.h  limits.h
ld64/include/foreign/i386/: _structs.h  types.h
ld64/include/foreign/libkern/: OSTypes.h
ld64/include/foreign/mach/: shared_memory_server.h
ld64/include/foreign/mach/arm/: vm_types.h
ld64/include/foreign/mach/i386/: machine_types.defs
ld64/include/foreign/mach/ppc/: _structs.h
ld64/include/foreign/machine/: _types.h
ld64/include/foreign/ppc/: _types.h  limits.h  types.h
ld64/include/foreign/sys/: _types.h  attr.h
ld64/include/mach-o/: dyld.h  getsect.h  ldsyms.h  loader.h  nlist.h  ranlib.h  rld.h
ld64/include/mach/i386/: _structs.h
ld64/include/mach/ppc/: _structs.h
ld64/include/stuff/: bytesex.h
ld64/include/sys/: gmon.h
ld64/ld64/: Makefile.in
ld64/ld64/doc/man/: Makefile.in
ld64/ld64/src/: Makefile.in  configure.h
ld64/ld64/src/3rd/: Makefile.am  Makefile.in  helper.c  helper.h  md5.c  mkpath_np.c  qsort_r.c  sha1.c
ld64/ld64/src/3rd/BlocksRuntime/: Makefile.in  runtime.c
ld64/ld64/src/ld/: HeaderAndLoadCommands.hpp  InputFiles.cpp  Makefile.am  Makefile.in  Options.cpp  OutputFile.cpp  Resolver.cpp  ResponseFiles.cpp  Snapshot.cpp  Snapshot.h  ld.cpp  ld.hpp  libcodedirectory.c  libcodedirectory.h
ld64/ld64/src/ld/code-sign-blobs/: blob.cpp  endian.h
ld64/ld64/src/ld/parsers/: Makefile.in  lto_file.cpp  macho_dylib_file.cpp  macho_relocatable_file.cpp
ld64/ld64/src/ld/parsers/libunwind/: AddressSpace.hpp  (+1 more)
ld64/ld64/src/ld/passes/: Makefile.in  bitcode_bundle.cpp  code_dedup.cpp  compact_unwind.h  objc.cpp  objc_constants.cpp  thread_starts.cpp
ld64/ld64/src/other/: Makefile.am  Makefile.in  ObjectDump.cpp  dyldinfo.cpp  machochecker.cpp  unwinddump.cpp
ld64/m4/: llvm.m4
ldid/: Makefile  ldid.cpp
libtapi/: CMakeLists.txt
libtapi/include/tapi/: LinkerInterfaceFile.h
libtapi/include/tapi/Core/: API.h  Architecture.def  FileManager.h  InterfaceFile.h  TextStubCommon.h  XPI.h
libtapi/lib/: CMakeLists.txt
libtapi/lib/Core/: Architecture.cpp  CMakeLists.txt  FakeSymbols.cpp  FileSystem.cpp  InterfaceFile.cpp  InterfaceFileManager.cpp  MachODylibReader.cpp  MachOReader.cpp  Path.cpp  Platform.cpp  Registry.cpp  TextStubCommon.cpp  TextStubv4.cpp  Utils.cpp  XPI.cpp  YAMLReaderWriter.cpp
libtapi/lib/Driver/: CMakeLists.txt
libtapi/tools/libtapi/: CMakeLists.txt  LinkerInterfaceFile.cpp
libtapi/tools/tapi-run/: tapi-run.cpp
mman/: CMakeLists.txt  build.sh
patches/: cctools.patch  ldid.patch  libtapi.patch
usage_examples/toolchain_all_osx/: build-only-ld64.sh  build-single-multiarch.sh  build-wrapper.sh  build-x86_64.sh  build.sh  cyg-reinstall-x86.bat  cyg-reinstall-x86_64.bat  cygwin_packages.sh  pacman_packages.sh  wrapper-clang-darwin.c  wrapper-clang-ios.c  wrapper-dsymutil.c  wrapper-ld.c  wrapper-strip.c  wrapper.c
wrappers/: build-wrappers.sh  build_wrappers.bat  targets.inc  wrapper.lpi  wrapper.lpr
